--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ website:
   title: "ABopsC"
   navbar:
     left:
-      - href: index.qmd
+      - href: index.html
         text: Home
       - /pages/about.qmd
     right:
