--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -13,7 +13,8 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: 0.3.71
-        run: quarto render
-        run: git push
-        run: quarto publish gh-pages
-        run: git push
+        run: |
+          quarto render
+          git push
+          quarto publish gh-pages
+          git push
